feat: can add a new tip using the form

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="container">
       <aside class="aside-content">
         <h2>Learn, Code and Save</h2>
-        <form class="aside-form">
+        <form id="tips-form" class="aside-form" method="post">
           <div class="form-field">
             <label for="title">Título</label>
             <input
