feat: display tips on page load and when a new one is created

--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
               id="category"
               name="category"
             >
-              <option value="frontend">FrontEnd</option>
-              <option value="backend">BackEnd</option>
-              <option value="fullstack">FullStack</option>
-              <option value="softskills">Comportamental/Soft</option>
+              <option value="FrontEnd">FrontEnd</option>
+              <option value="BackEnd">BackEnd</option>
+              <option value="FullStack">FullStack</option>
+              <option value="Comportamental/Soft">Comportamental/Soft</option>
             </select>
           </div>
 
@@ -136,89 +136,7 @@
           </button>
         </form>
 
-        <ul class="card-list">
-          <li class="card">
-            <h3 class="card-title">Grid vs Flex-Box</h3>
-            <p><b>Linguagem/Skill: </b>CSS</p>
-            <p><b>Categoria: </b>FrontEnd</p>
-            <p>
-              A diferença crucial entre flexbox e grid, além do primeiro ser
-              unidimensional e o outro ser bi-dimensional, é que o controle do
-              layout no grid vem do container e no flexbox vem dos elementos. A
-              diferença crucial entre flexbox e grid, além do primeiro ser
-              unidimensional e o outro ser bi-dimensional, é que o controle do
-              layout no grid vem do container e no flexbox vem dos elementos. A
-              diferença crucial entre flexbox e grid, além do primeiro ser
-              unidimensional e o outro ser bi-dimensional, é que o controle do.
-            </p>
-
-            <div class="card-controls">
-              <button class="card-button button-delete" type="button">
-                <img src="images/trash.svg" alt="deletar" />
-              </button>
-              <button class="card-button button-edit" type="button">
-                <img src="images/edit.svg" alt="editar" />
-              </button>
-              <button class="card-button button-video" type="button">
-                <img src="images/video.svg" alt="video" />
-              </button>
-            </div>
-          </li>
-          <li class="card">
-            <h3 class="card-title">Grid vs Flex-Box</h3>
-            <p><b>Linguagem/Skill: </b>CSS</p>
-            <p><b>Categoria: </b>FrontEnd</p>
-            <p>
-              A diferença crucial entre flexbox e grid, além do primeiro ser
-              unidimensional e o outro ser bi-dimensional, é que o controle do
-              layout no grid vem do container e no flexbox vem dos elementos. A
-              diferença crucial entre flexbox e grid, além do primeiro ser
-              unidimensional e o outro ser bi-dimensional, é que o controle do
-              layout no grid vem do container e no flexbox vem dos elementos. A
-              diferença crucial entre flexbox e grid, além do primeiro ser
-              unidimensional e o outro ser bi-dimensional, é que o controle do.
-            </p>
-
-            <div class="card-controls">
-              <button class="card-button button-delete" type="button">
-                <img src="images/trash.svg" alt="deletar" />
-              </button>
-              <button class="card-button button-edit" type="button">
-                <img src="images/edit.svg" alt="editar" />
-              </button>
-              <button class="card-button button-video" type="button">
-                <img src="images/video.svg" alt="video" />
-              </button>
-            </div>
-          </li>
-          <li class="card">
-            <h3 class="card-title">Grid vs Flex-Box</h3>
-            <p><b>Linguagem/Skill: </b>CSS</p>
-            <p><b>Categoria: </b>FrontEnd</p>
-            <p>
-              A diferença crucial entre flexbox e grid, além do primeiro ser
-              unidimensional e o outro ser bi-dimensional, é que o controle do
-              layout no grid vem do container e no flexbox vem dos elementos. A
-              diferença crucial entre flexbox e grid, além do primeiro ser
-              unidimensional e o outro ser bi-dimensional, é que o controle do
-              layout no grid vem do container e no flexbox vem dos elementos. A
-              diferença crucial entre flexbox e grid, além do primeiro ser
-              unidimensional e o outro ser bi-dimensional, é que o controle do.
-            </p>
-
-            <div class="card-controls">
-              <button class="card-button button-delete" type="button">
-                <img src="images/trash.svg" alt="deletar" />
-              </button>
-              <button class="card-button button-edit" type="button">
-                <img src="images/edit.svg" alt="editar" />
-              </button>
-              <button class="card-button button-video" type="button">
-                <img src="images/video.svg" alt="video" />
-              </button>
-            </div>
-          </li>
-        </ul>
+        <ul id="card-list" class="card-list"></ul>
       </main>
     </div>
   </body>
