feat: can edit a tip

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <h2>Learn, Code and Save</h2>
         <form id="tips-form" class="aside-form" method="post">
           <div class="form-field">
+            <input type="hidden" id="tipID" name="tipID" value="" />
             <label for="title">Título</label>
             <input
               class="form-input"
