feat: open video on another tab when clicking on video button

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <label for="videoURL">Vídeo do YouTube</label>
             <input
               class="form-input"
-              type="text"
+              type="url"
               name="videoURL"
               id="videoURL"
               placeholder="https://suaurl.com"
