feat: display stats about the tips

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
               <option value="FrontEnd">FrontEnd</option>
               <option value="BackEnd">BackEnd</option>
               <option value="FullStack">FullStack</option>
-              <option value="Comportamental/Soft">Comportamental/Soft</option>
+              <option value="SoftSkills">SoftSkills</option>
             </select>
           </div>
 
@@ -100,28 +100,7 @@
       </aside>
 
       <main class="main-content">
-        <ul class="stats-list">
-          <li class="stat-item">
-            <span>Total</span>
-            <span>38</span>
-          </li>
-          <li class="stat-item">
-            <span>FrontEnd</span>
-            <span>12</span>
-          </li>
-          <li class="stat-item">
-            <span>BackEnd</span>
-            <span>7</span>
-          </li>
-          <li class="stat-item">
-            <span>FullStack</span>
-            <span>5</span>
-          </li>
-          <li class="stat-item">
-            <span>SoftSkill</span>
-            <span>14</span>
-          </li>
-        </ul>
+        <ul id="stats" class="stats-list"></ul>
 
         <form class="search-form">
           <input
