feat: can search tips by the title

--- a/index.html
+++ b/index.html
@@ -102,8 +102,9 @@
       <main class="main-content">
         <ul id="stats" class="stats-list"></ul>
 
-        <form class="search-form">
+        <form id="search-form" class="search-form">
           <input
+            id="search"
             class="search-input"
             type="text"
             placeholder="Digite um título para buscar..."
