--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="shortcut icon" href="images/book.png" type="image/png" />
     <title>DEVinKnowledge</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="components/Modal/style.css" />
     <script src="index.js" type="module"></script>
   </head>
   <body>
