--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css" />
 
     <title>DEVinKnowledge</title>
-    <script src="index.js" type="module"></script>
+    <script src="./scripts/index.js" type="module"></script>
   </head>
   <body>
     <header class="header">
